Fixed not showing categories dropdown

--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -49,7 +49,7 @@ header .category-selector.active {
     color: #7dc93f;
 }
 
-header .navbar {
+header .mobile.navbar-nav {
     overflow-y: auto;
     max-height: 100vh;
 }
